<?xml version="1.0"?>
<package format="2">
  <name>descartes_capability</name>
  <version>0.0.1</version>
  <description>A move_group capability that uses Descartes for Cartesian Planning</description>

  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/descartes_capability</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/descartes_capability/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/descartes_capability/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>descartes_trajectory</depend>
  <depend>descartes_planner</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rospy</depend>
  <depend>eigen_conversions</depend>
  <depend version_eq="3.9">clang-format</depend>

  <test_depend version_gte="1.11.2">pluginlib</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>moveit_resources</test_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/descartes_capability_plugin_description.xml"/>
  </export>
</package>
